--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "/src/app/index.ts",
   "scripts": {
     "dev": "nodemon src/app/index.ts",
@@ -11,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.3.1",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/node": "^20.7.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-tsc": "^0.0.14",
     "nodemon": "^3.0.1",
+    "prisma": "^5.3.1",
     "rimraf": "^5.0.5",
     "swc": "^1.0.11",
     "ts-node": "^10.9.1",
